# NoobSQL

./: README.md  build.gradle.kts  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/noobsql/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: jToCpp.hpp  maxLength.hpp
app/src/main/cpp/include/Database/: Database.hpp
app/src/main/cpp/src/: DatabaseColumns.cpp  DatabaseRows.cpp  DatabaseTable.cpp
app/src/main/java/com/example/noobsql/: MainActivity.kt
app/src/main/res/drawable/: border.xml  border_table.xml
app/src/main/res/layout/: activity_main.xml  item.xml  table_view_cell_layout.xml  table_view_column_header_layout.xml  table_view_corner_layout.xml  table_view_row_header_layout.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/noobsql/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
